compiler/testData/diagnostics/tests/invalidTargetCrashesCompiler.latestLV.kt
// RUN_PIPELINE_TILL: FRONTEND
// LATEST_LV_DIFFERENCE
// ISSUE: KT-59110
// IGNORE_PHASE_VERIFICATION: invalid code inside annotations

<!WRONG_ANNOTATION_TARGET!>@Target(<!ARGUMENT_TYPE_MISMATCH, ARGUMENT_TYPE_MISMATCH!>{}<!>)<!>
interface SomeInterface {
}
